[JBTM-1156] add ipv6 JVM args for running arquillian
[JBTM-1156] modular hudson run script

[JBTM-1156]

[JBTM-1156] arquillian hangs in IPv6 mode unless the managemnetAddress is set correctly

[JBTM-1156] Temporarily disable testAT5_5 and test for IPv6

[JBTM-1156] Test for IPv6 for hardcoded endpoints

[JBTM-1156] First pass at IPv6 tweaks for txbridge

[JBTM-1156] arquillian fixes for WSTX11 INTEROP and UNIT TESTS

[JBTM-1156] IPv6 support for XTS crash rec tests

[JBTM-1156] XTS crash rec test hardcodes opts in BaseCrashTest - add a workaround to test IPv6 on dual IP stack hosts

[JBTM-1156] Need an empty constructor

[JBTM-1156] correct typo

[JBTM-1156] Fix type

[JBTM-1156] Replace ::1 with [::1] for managmentAddress

[JBTM-1156] Change URL encode/decode to cope with [::1]

experiment with web.xml

[JBTM-1156] revert httpclient experiment

--- a/XTS/localjunit/WSTX11-interop/src/main/resources/web.xml
+++ b/XTS/localjunit/WSTX11-interop/src/main/resources/web.xml
@@ -44,7 +44,7 @@
     <!-- base URL for location of Interop 1.1 services -->
     <context-param>
         <param-name>BaseURI</param-name>
-        <param-value>http://localhost:8080/interop11</param-value>
+        <param-value>http://[::1]:8080/interop11</param-value>
     </context-param>
 
     <!-- Initialise Interop 11 services -->
@@ -93,7 +93,7 @@
          -->
         <init-param>
             <param-name>proxyServiceURI</param-name>
-            <param-value>http://localhost:8080/interop11/proxy</param-value>
+            <param-value>http://[::1]:8080/interop11/proxy</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
