--- a/txbridge/pom.xml
+++ b/txbridge/pom.xml
@@ -33,6 +33,8 @@
         <general.server.jvm.args>
             -Xms64m -Xmx512m -XX:MaxPermSize=256m
         </general.server.jvm.args>
+        <ipv4.server.jvm.args></ipv4.server.jvm.args>
+        <ipv6.server.jvm.args>-Djboss.bind.address=[::1] -Djboss.bind.address.management=[::1] -Djboss.bind.address.unsecure=[::1] -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</ipv6.server.jvm.args>
         <byteman.server.jvm.args>
             -Dorg.jboss.byteman.debug=true -Dorg.jboss.byteman.verbose=true -Dorg.jboss.byteman.contrib.dtest.rmiregistry.port=1199
             -Djboss.modules.system.pkgs=org.jboss.byteman
@@ -252,8 +254,9 @@
 							<!-- System properties passed to test cases -->
 							<systemPropertyVariables>
 								<!-- Used in arquillian.xml - arguments for all JBoss AS instances. -->
-								<server.jvm.args>${general.server.jvm.args} ${byteman.server.jvm.args} ${jpda.server.jvm.args}</server.jvm.args>
+								<server.jvm.args>${general.server.jvm.args} ${ipv4.server.jvm.args} ${byteman.server.jvm.args} ${jpda.server.jvm.args}</server.jvm.args>
 								<java.rmi.server.codebase>file://target/test-classes/</java.rmi.server.codebase>
+								<node.address>localhost</node.address>
 							</systemPropertyVariables>
 						</configuration>
 					</plugin>
@@ -264,6 +267,47 @@
 					<groupId>org.jboss.as</groupId>
 					<artifactId>jboss-as-arquillian-container-managed</artifactId>
 					<version>${version.jbossas}</version>
+<!-- TODO harmonise versions
+					<version>${jboss-as.version}</version>
+-->
+					<scope>test</scope>
+				</dependency>
+			</dependencies>
+		</profile>
+		<profile>
+			<id>arqIPv6</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.11</version>
+						<configuration>
+							<!-- Prevent test and server output appearing in console. -->
+							<redirectTestOutputToFile>true</redirectTestOutputToFile>
+							<enableAssertions>true</enableAssertions>
+							<!-- Tests to execute. -->
+							<includes>
+								<include>**/*Tests.java</include>
+							</includes>
+							<!-- System properties passed to test cases -->
+							<systemPropertyVariables>
+								<!-- Used in arquillian.xml - arguments for all JBoss AS instances. -->
+								<server.jvm.args>${general.server.jvm.args} ${ipv6.server.jvm.args} ${byteman.server.jvm.args} ${jpda.server.jvm.args}</server.jvm.args>
+								<java.rmi.server.codebase>file://target/test-classes/</java.rmi.server.codebase>
+								<node.address>[::1]</node.address>
+							</systemPropertyVariables>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+			<dependencies>
+				<dependency>
+					<groupId>org.jboss.as</groupId>
+					<artifactId>jboss-as-arquillian-container-managed</artifactId>
+					<version>${jboss-as.version}</version>
 					<scope>test</scope>
 				</dependency>
 			</dependencies>
