--- a/ArjunaCore/arjuna/build.xml
+++ b/ArjunaCore/arjuna/build.xml
@@ -48,10 +48,7 @@
             <additional.classpath>
                 <!-- jconsole performance graphing support
                      -->
-                <fileset dir="${sharedbuild.base.dir}/ext/" includes="orson-0.5.0.jar"/>
-                <fileset dir="${sharedbuild.base.dir}/ext/" includes="jcommon-1.0.10.jar"/>
-                <fileset dir="${sharedbuild.base.dir}/ext/" includes="jfreechart-1.0.6.jar"/>
-                <fileset dir="${java.home}/../lib/" includes="jconsole.jar"/>
+                <path refid="perf.support.lib" />
             </additional.classpath>
         </compile.macro>
     </target>
