--- a/txbridge/pom.xml
+++ b/txbridge/pom.xml
@@ -309,6 +309,21 @@
 					<artifactId>jboss-as-arquillian-container-managed</artifactId>
 					<version>${jboss-as.version}</version>
 					<scope>test</scope>
+
+					<!-- exclude logmanager because an incompatible version is pulled in
+					  -->
+					<exclusions>
+						<exclusion>
+							<artifactId>org.jboss.logmanager</artifactId>
+							<groupId>jboss-logmanager</groupId>
+						</exclusion>
+					</exclusions>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.logmanager</groupId>
+					<artifactId>jboss-logmanager</artifactId>
+					<version>1.3.1.Final</version>
+					<scope>provided</scope>
 				</dependency>
 			</dependencies>
 		</profile>
