--- a/narayana-full/pom.xml
+++ b/narayana-full/pom.xml
@@ -77,6 +77,14 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.narayana.jts</groupId>
+      <artifactId>narayana-jts-idlj</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.narayana.jts</groupId>
+      <artifactId>idlj-idl</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.narayana.jts</groupId>
       <artifactId>narayana-jts</artifactId>
       <classifier>javadoc</classifier>
     </dependency>
