JBTM-934 Stubs are no longer packaged with org.jboss.narayana.jts:jts. Make sure orbportability and jtax tests run against both ORBs Ensure the QA test suite runs against either orb

--- a/ArjunaJTS/idl/idlj/pom.xml
+++ b/ArjunaJTS/idl/idlj/pom.xml
@@ -109,6 +109,8 @@
                 <source>
                   <includes>
                     <include>TestModule.idl</include>
+                    <include>test.idl</include>
+                    <include>orbtests.idl</include>
                   </includes>
                   <compatible>false</compatible>
                   <packagePrefixes>
@@ -119,6 +121,10 @@
                     <packagePrefix>
                       <type>CosTransactions</type>
                       <prefix>org.omg</prefix>
+                    </packagePrefix>
+                    <packagePrefix>
+                      <type>orbtests</type>
+                      <prefix>com.hp.mwtests.orbportability.orbspecific</prefix>
                     </packagePrefix>
                   </packagePrefixes>
                   <additionalArguments>
