--- a/ArjunaJTS/jtax/pom.xml
+++ b/ArjunaJTS/jtax/pom.xml
@@ -50,17 +50,62 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <argLine>-Xss2048k</argLine>
-          <systemProperties combine.children="append"/>
-          <excludes>
-            <exclude>**/common/**</exclude>
-            <exclude>**/ExampleXAResource.java</exclude>
-            <exclude>**/JTSTestCase.java</exclude>
-            <exclude>**/LastOnePhaseResource.java</exclude>
-            <exclude>**/implicit/**</exclude>
-          </excludes>
-        </configuration>
+         <executions>
+            <execution>
+              <id>default-test</id>
+              <phase>test</phase>
+              <goals>
+                <goal>test</goal>
+              </goals>
+              <configuration>
+                <skip>false</skip>
+                <argLine>-Xss2048k</argLine>
+                <systemProperties combine.children="append"/>
+                <excludes>
+                  <exclude>**/common/**</exclude>
+                  <exclude>**/ExampleXAResource.java</exclude>
+                  <exclude>**/JTSTestCase.java</exclude>
+                  <exclude>**/LastOnePhaseResource.java</exclude>
+                  <exclude>**/implicit/**</exclude>
+                </excludes>
+                <classpathDependencyExcludes>
+                  <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl</classpathDependencyExcludes>
+                  <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl:test-jar</classpathDependencyExcludes>
+                </classpathDependencyExcludes>
+              </configuration>
+            </execution>
+            <execution>
+              <id>surefire-idlj</id>
+              <phase>test</phase>
+              <goals>
+                <goal>test</goal>
+              </goals>
+              <configuration>
+                <skip>false</skip>
+                <argLine>-Xss2048k</argLine>
+                <systemProperties combine.children="append"/>
+                <excludes>
+                  <exclude>**/common/**</exclude>
+                  <exclude>**/ExampleXAResource.java</exclude>
+                  <exclude>**/JTSTestCase.java</exclude>
+                  <exclude>**/LastOnePhaseResource.java</exclude>
+                  <exclude>**/implicit/**</exclude>
+                </excludes>
+                <reportsDirectory>${project.build.directory}/idlj-surefire-reports</reportsDirectory>
+                  <classpathDependencyExcludes>
+                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl</classpathDependencyExcludes>
+                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
+                  </classpathDependencyExcludes>
+
+                  <systemPropertyVariables combine.children="append">
+                    <OrbPortabilityEnvironmentBean.orbImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.orb.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.orbImpleClassName>
+                    <OrbPortabilityEnvironmentBean.poaImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.oa.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.poaImpleClassName>
+                    <OrbPortabilityEnvironmentBean.orbDataClassName>com.arjuna.orbportability.internal.orbspecific.versions.javaidl_1_4</OrbPortabilityEnvironmentBean.orbDataClassName>
+                  </systemPropertyVariables>
+
+              </configuration>
+            </execution>
+          </executions>
       </plugin>
     </plugins>
   </build>
@@ -73,6 +118,28 @@
       <groupId>org.jboss.narayana.jts</groupId>
       <artifactId>jts</artifactId>
     </dependency>
+    <!-- pull in IDL stubs for each supported ORB (JacORB and Sun) -->
+    <dependency>
+      <groupId>org.jboss.narayana.jts</groupId>
+      <artifactId>jacorb-idl</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.narayana.jts</groupId>
+      <artifactId>jacorb-idl</artifactId>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.narayana.jts</groupId>
+      <artifactId>idlj-idl</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.narayana.jts</groupId>
+      <artifactId>idlj-idl</artifactId>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.jboss.narayana.jts</groupId>
       <artifactId>orbportability</artifactId>
@@ -133,129 +200,4 @@
             <scope>test</scope>
         </dependency>
   </dependencies>
-
-  <profiles>
-    <profile>
-      <id>jacorb</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>idlj-maven-plugin</artifactId>
-            <dependencies>
-              <dependency>
-                <groupId>org.jacorb</groupId>
-                <artifactId>jacorb-idl-compiler</artifactId>
-                <version>2.2.3</version>
-              </dependency>
-            </dependencies>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>generate-test</goal>
-                </goals>
-              </execution>
-            </executions>
-            <configuration>
-              <compiler>jacorb</compiler>
-              <sourceDirectory>tests/idl/</sourceDirectory>
-              <sources>
-                <source>
-                  <includes>
-                    <include>test.idl</include>
-                  </includes>
-                  <additionalArguments>
-                    <additionalArgument>-DORB_OTS_SUPPORT=1</additionalArgument>
-                    <additionalArgument>-DORB_CURRENT_SUPPORT=1</additionalArgument>
-                  </additionalArguments>
-                </source>
-              </sources>
-              <includeDirs>
-                <includeDir>../jts/idl/omg</includeDir>
-                <includeDir>../jts/idl/arjuna</includeDir>
-                <includeDir>../jts/../jacorb/idl/omg</includeDir>
-              </includeDirs>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>idlj</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>idlj-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>generate-test</goal>
-                </goals>
-              </execution>
-            </executions>
-            <configuration>
-              <compiler>idlj</compiler>
-              <sourceDirectory>tests/idl/</sourceDirectory>
-              <sources>
-                <source>
-                  <includes>
-                    <include>test.idl</include>
-                  </includes>
-                  <compatible>false</compatible>
-<!-- the defines option is broken in 1.1) hence the use of -d option below
-                  <defines>
-                      <define>
-                        <symbol>ORB_OTS_SUPPORT</symbol>
-                        <value>1</value>
-                      </define>
-                      <define>
-                        <symbol>ORB_CURRENT_SUPPORT</symbol>
-                        <value>1</value>
-                      </define>
-                  </defines>
--->
-
-                  <packagePrefixes>
-                      <packagePrefix>
-                        <type>CosTransactions</type>
-                        <prefix>org.omg</prefix>
-                      </packagePrefix>
-                  </packagePrefixes>
-
-                  <additionalArguments>
-                    <additionalArgument>-i</additionalArgument>
-                    <additionalArgument>${basedir}/../jts/idl/omg</additionalArgument>
-                    <additionalArgument>-i</additionalArgument>
-                    <additionalArgument>${basedir}/../jts/idl/arjuna</additionalArgument>
-                    <additionalArgument>-i</additionalArgument>
-                    <additionalArgument>${env.JAVA_HOME}/lib</additionalArgument>
-                    <additionalArgument>-d</additionalArgument>
-                    <additionalArgument>ORB_OTS_SUPPORT=1</additionalArgument>
-                    <additionalArgument>-d</additionalArgument>
-                    <additionalArgument>ORB_CURRENT_SUPPORT=1</additionalArgument>
-                  </additionalArguments>
-                </source>
-              </sources>
-<!-- the includeDirs option is broken in 1.1 (and in 1.2-SNAPSHOT) hence the use of -i above
-              <includeDirs>
-                <includeDir>idl</includeDir>
-                <includeDir>../jts/idl/omg</includeDir>
-                <includeDir>../jts/idl/arjuna</includeDir>
-                <includeDir>${env.JAVA_HOME}/lib</includeDir>
-              </includeDirs>
--->
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
-
 </project>
