--- a/ArjunaJTS/narayana-jts-idlj/pom.xml
+++ b/ArjunaJTS/narayana-jts-idlj/pom.xml
@@ -149,7 +149,8 @@
                   <include>org.jboss.narayana.jta:jta</include>
                   <include>org.jboss.narayana.jta:jdbc</include>
                   <include>org.jboss.narayana.jts:orbportability</include>
-                  <include>org.jboss.narayana.jts:jts:idlj</include>
+                  <include>org.jboss.narayana.jts:jts</include>
+                  <include>org.jboss.narayana.jts:idlj-idl</include>
                   <include>org.jboss.narayana.jts:jtax</include>
                 </includes>
               </artifactSet>
