--- a/ArjunaJTS/narayana-jts-jacorb/pom.xml
+++ b/ArjunaJTS/narayana-jts-jacorb/pom.xml
@@ -19,7 +19,7 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>narayana-jts</artifactId>
+  <artifactId>narayana-jts-jacorb</artifactId>
   <name>JBossJTS packaged module</name>
   <packaging>jar</packaging>
   <description>jts uber</description>
