--- a/narayana-full/pom.xml
+++ b/narayana-full/pom.xml
@@ -73,7 +73,7 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.narayana.jts</groupId>
-      <artifactId>narayana-jts</artifactId>
+      <artifactId>narayana-jts-jacorb</artifactId>
     </dependency>
     <dependency>
       <groupId>org.jboss.narayana.jts</groupId>
@@ -85,7 +85,7 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.narayana.jts</groupId>
-      <artifactId>narayana-jts</artifactId>
+      <artifactId>narayana-jts-jacorb</artifactId>
       <classifier>javadoc</classifier>
     </dependency>
     <dependency>
