--- a/rest-tx/webservice/pom.xml
+++ b/rest-tx/webservice/pom.xml
@@ -36,18 +36,18 @@
     <dependency>
       <groupId>org.jboss.narayana.rts</groupId>
       <artifactId>rest-tx-api</artifactId>
-      <version>${version.artifactId}</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.jboss.narayana.rts</groupId>
       <artifactId>rest-tx-api</artifactId>
-      <version>${version.artifactId}</version>
+      <version>${project.version}</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.jboss.narayana.jts</groupId>
-      <artifactId>narayana-jts</artifactId>
+      <groupId>org.jboss.narayana.jta</groupId>
+      <artifactId>narayana-jta</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
