--- a/txbridge/pom.xml
+++ b/txbridge/pom.xml
@@ -40,6 +40,14 @@
             -Djboss.modules.system.pkgs=org.jboss.byteman
             -javaagent:${byteman.home}/byteman.jar=port:9091,listener:true,sys:${byteman.home}/byteman-dtest.jar
         </byteman.server.jvm.args>
+        <byteman.server.ipv6.jvm.args>
+            -Dorg.jboss.byteman.debug=true -Dorg.jboss.byteman.verbose=true -Dorg.jboss.byteman.contrib.dtest.rmiregistry.port=1199
+            -Djboss.modules.system.pkgs=org.jboss.byteman
+<!--
+            -javaagent:${byteman.home}/byteman.jar=address:0:0:0:0:0:0:0:1,port:9091,listener:true,sys:${byteman.home}/byteman-dtest.jar
+-->
+            -javaagent:${byteman.home}/byteman.jar=port:9091,listener:true,sys:${byteman.home}/byteman-dtest.jar
+        </byteman.server.ipv6.jvm.args>
         <jpda.server.jvm.args/>
     </properties>
     <build>
@@ -296,7 +304,7 @@
 							<!-- System properties passed to test cases -->
 							<systemPropertyVariables>
 								<!-- Used in arquillian.xml - arguments for all JBoss AS instances. -->
-								<server.jvm.args>${general.server.jvm.args} ${ipv6.server.jvm.args} ${byteman.server.jvm.args} ${jpda.server.jvm.args}</server.jvm.args>
+								<server.jvm.args>${general.server.jvm.args} ${ipv6.server.jvm.args} ${byteman.server.ipv6.jvm.args} ${jpda.server.jvm.args}</server.jvm.args>
 								<java.rmi.server.codebase>file://target/test-classes/</java.rmi.server.codebase>
 								<node.address>[::1]</node.address>
 							</systemPropertyVariables>
